# CoreSimulator

./: CMakeLists.txt  README.md
include/: Burst.hpp  Core.hpp  Process.hpp  SchedulingAlgorithm.hpp
source/: Burst.cpp  Core.cpp  SchedulingAlgorithm.cpp  main.cpp
